# biomarker-extractor

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
docs/: conf.py
src/biomarkers/: biomarkers.py  compcor.py  datasets.py  imgs.py  prefect_utils.py  task_runners.py  utils.py
src/biomarkers/cli/: connectivity.py  dask_config.py  signature.py
src/biomarkers/data/: batch.m  dtifit_wrapper  fan.csv  fan_atlas.csv  power2011_atlas.tsv
src/biomarkers/entrypoints/: bedpostx.py  brainager.py  cat.py  denoise_fmri.py  dtifit.py  dwi_biomarker1.py  fmriprep.py  fslanat.py  functional_connectivity.py  gift.py  mriqc.py  postdtifit.py  postgift.py  qsiprep.py  signatures.py  synthstrip.py  tapis.py  tapismpi.py
src/biomarkers/flows/: anat2parquet.py  brainager.py  cat.py  connectivity.py  cuff.py  denoise_fmri.py  dwi_biomarker1.py  fslanat.py  functional_connectivity.py  postdtifit.py  postgift.py  signature.py  synthstrip.py
src/biomarkers/interfaces/: catutils.py
src/biomarkers/models/: bids.py  brainager.py  cat.py  fmriprep.py  fslanat.py  functional_connectivity.py  postprocess.py  signatures.py
src/biomarkers/task/: compcor.py  utils.py
src/biomarkers/workflows/: anat.py  cat.py
tests/: test_datasets.py  test_detrend.py  test_functional_connectivity.py  test_imgs.py  test_postprocess.py  test_signatures.py  test_utils.py
tools/: cat_test.py  download_data.py  make_resting_atlas.py  write_nps_weights.py
