[project]
name = "biomarkers"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ancpbids>=0.2.5",
    "mpi4py>=3.1.6",
    "nibabel",
    "nilearn",
    "numpy",
    "polars",
    "pyarrow",
    "pydantic>=2.0",
    "scikit-image",
    "scikit-learn",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["mpi: tests that require mpirun"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore:Development of the BIDSLayout:UserWarning"]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
]

[tool.ruff]
exclude = ["tools"]

[tool.hatch.envs.default]
installer = "uv"

[[tool.hatch.envs.test.matrix]]
python = ["3.12", "3.11"]
